# HalconTests

./: README.md  cursor-mcp-config.json  mcp_server.py  requirements.txt
HalconTest/: .devdbrc  .gitignore  HalconTest.py  README.md  analyze_duplicate_names.py  build_halcon_db.py  build_semantic_indices.py  chunk_scanner_cli.py  chunks_debug_20250703_140229.csv  clean_duplicates.py  context.md  contexts_debug_20250703_140229.csv  dataExtractor.py  halcon_chat_app.py  halcon_operators.db-shm  halcon_operators.db-wal  halcon_operators_v3.db  halcon_ops.csv  halcon_scraper.py  improved_halcon_scraper.py  main.py  mcp.md  print.py  pyproject.toml  scrapy.py  setup.py  test.txt  test_calls.py  test_mcp_search.py
HalconTest/Debugging/: analyze_db_schema.py
HalconTest/Halcon Programming/: context.md
HalconTest/Halcon Programming/Halcon Programming/: cylinder_perturb_fit.txt
HalconTest/Halcon Programming/OLD/: goat prompt.txt  object_detection_pipeline.txt  test.txt
HalconTest/Testing with UI/: halcon_chat_app.py  requirements.txt  test_mcp_search.py
HalconTest/Testing with UI/static/: style.css
HalconTest/Testing with UI/templates/: chat.html
HalconTest/databases/: halcon_chunks_full.faiss  halcon_chunks_full_meta.pkl
HalconTest/static/: script.js  style.css
HalconTest/templates/: chat.html
HalconTest/utils/: analyze_duplicates.py  build_halcon_db.py  chunk_dev.py  chunk_scanner_cli.py  combine.py  halcon_operators_local.db
