[project]
name = "halcon-mcp-server"
version = "0.1.0"
description = "MCP server providing comprehensive access to HALCON operator documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "numpy>=1.23",
]
